--- a/README.org
+++ b/README.org
@@ -18,15 +18,15 @@ Check out all of the features:
 
 - Tools and tips for a [[#making-room-to-write][distraction free workspace]], [[#decorating-your-room][beautiful colors]], and [[#why-writing-requires-good-characters-and-unicode][lovely fonts]] make writing a treat
 - Make easy problems disappear with built in [[#how-do-you-spell-that-again][spell checking]] and [[#finding-and-saving-your-voice][grammar tools]]
-- Let your computer [[#we-can-type-it-for-you-wholesale][automatically types all of the most tedious, error-prone, and difficult]] giving you more time to write the good stuff
-- [[#make-your-first-post-in-less-5-minutes][Easy user-interface]] helps you get the job done fast. When you can't remember what something does just hit =h= for help and get that help instantly: no user manual required
+- Let your computer [[#we-can-type-it-for-you-wholesale][automatically type all of the most tedious, error-prone, and difficult]] giving you more time to write the good stuff
+- [[#make-your-first-post-in-less-5-minutes][Easy user-interface]] helps you get the job done fast. When you can't remember what something does just hit =h= for help: no user manual required
 - Edit and save in plain old text with [[https://orgmode.org/guide/Markup.html][Org mode]] markup instead of flakey WYSIWYG or nightmarish M. C. Escher-esque style editors that would make [[https://en.wikipedia.org/wiki/Johannes_Gutenberg][Gutenberg]] cry
-- Setup so simple [[#make-your-first-post-in-less-5-minutes][you will be blogging in 5m or less]]
+- Setup so simple [[#make-your-first-post-in-less-5-minutes][you will be blogging in five minutes or less]]
 - [[#why-writing-requires-good-characters-and-unicode][Write around the world in any language ever]] with full first-class Unicode support
-- [[#publishing-and-sharing-with-everyone][Share with your friends]] in any format you want: you are writing in plain text that can get exported to text, PDF, and more
+- [[#publishing-and-sharing-with-everyone][Share with your friends]] in any format you want: you are writing in plain text that can get exported to PDF and more
 - Runs on just about [[#install-emacs][every computer out there]]: macOS, Windows, Linux, and most UNIX'en work just file
 - Write posts anytime with an Internet connection or not: they just get saved until you want to post them and you can store them on your computer, in Dropbox, or your favorite version control system
-- Insert images from your computer and they are automatically uploaded to your page along with resizing options
+- Insert images from your computer and they are automatically uploaded to your post or page
 - Works with [[#your-first-buffer-page][Pages too]]
 - Don't see what you need? [[https://github.com/org2blog/org2blog/issues][Let us know]]. [[#development][Development]] is open-source and easy to get started with. Help Org2Blog get better and better.
 
