--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@ Check out all of the features:
 - Edit and save in plain old text with [[https://orgmode.org/guide/Markup.html][Org mode]] markup instead of flakey WYSIWYG or nightmarish M. C. Escher-esque style editors that would make [[https://en.wikipedia.org/wiki/Johannes_Gutenberg][Gutenberg]] cry
 - Setup so simple [[#make-your-first-post-in-less-5-minutes][you will be blogging in five minutes or less]]
 - [[#why-writing-requires-good-characters-and-unicode][Write around the world in any language ever]] with full first-class Unicode support
-- [[#publishing-and-sharing-with-everyone][Share with your friends]] in any format you want: you are writing in plain text that can get exported to PDF and more
+- [[#publishing-and-sharing-with-everyone][Share with your friends]] in any format you want: you are writing in plain text that can get exported to PDF, Word, and more
 - Runs on just about [[#install-emacs][every computer out there]]: macOS, Windows, Linux, and most UNIXen work just fine
 - Write posts anytime with an Internet connection or not: they just get saved until you want to post them and you can store them on your computer, in Dropbox, or your favorite version control system
 - Insert images from your computer and they are automatically uploaded to your post or page
@@ -1141,7 +1141,7 @@ You can use =UI [Completion]= on it too.
 
 Living with first-class WordPress support is fun and comfortable. Some day though you may want to publishing your writing in a different format.
 
-For example say you want to share your writing as flat text files with some of your techie friends. Or maybe you want to share them as PDFs with your other friends and family. Because you ultimately writing Org mode files you can [[https://orgmode.org/manual/Exporting.html][export your file to just about anything]].
+For example say you want to share your writing as flat text files with some of your techie friends. Or maybe you want to share them as PDF or Word files with your other friends and family. Because you ultimately writing Org mode files you can [[https://orgmode.org/manual/Exporting.html][export your file to just about anything]].
 
 When you write your Entries with Org2Blog you are making your writing future-safe and more shareable than any other tool out there.
 
