--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -63,13 +63,15 @@
   - [X] Install it with ~package-install-file~. Open install folder and look
     at the headers: are they OK?
   - [X] Test using the package versus using the source code.
-- [ ] Create a Feature Reqest with this in it:
+- [X] Create a Feature Reqest with this in it:
   #+begin_src gfm
 This is a placeholder for when vX.Y.Z gets released.
 
 It serves as a notification for users running into any issues.
 
 When the [branch](https://github.com/org2blog/org2blog/tree/X.Y.Z) is merged I'll add a comment here.
+
+After day or two when it seems OK I'll tag it.
   #+end_src
-- [ ] Merge branch into ~master~
-- [ ] Tag and push it
+- [ ] Merge branch into ~master~ push it.
+- [ ] Wait a day or two to make sure it is OK then tag it.
